# 35-2-lambda-function

./: CMakeLists.txt  README.md
include/: functions.h
src/: CMakeLists.txt  main.cpp
